🩹 fix : #10 Board 페이지네이션에서 List로 변경